--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "project02-nodejs-2023",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "tsx watch ./src/server.ts",
-    "test": "vitest run --dir ./test",
-    "build": "tsup ./src --out-dir build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fastify/cookie": "^8.3.0",
-    "@prisma/client": "^4.12.0",
-    "@types/node": "^18.13.0",
-    "dotenv": "^16.0.3",
-    "fastify": "^4.13.0",
-    "sqlite3": "^5.1.4",
-    "zod": "^3.20.6"
-  },
-  "devDependencies": {
-    "@types/supertest": "^2.0.12",
-    "prisma": "^4.12.0",
-    "supertest": "^6.3.3",
-    "tsup": "^6.6.3",
-    "tsx": "^3.12.3",
-    "typescript": "^4.9.5",
-    "vite-tsconfig-paths": "^4.0.7",
-    "vitest": "^0.28.5"
-  }
+    "name": "project02-nodejs-2023",
+    "version": "1.0.0",
+    "description": "desafio 02 daily diet",
+    "main": "index.js",
+    "scripts": {
+        "dev": "tsx watch ./src/server.ts",
+        "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
+        "test": "vitest",
+        "build": "tsup ./src --out-dir build"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@fastify/cookie": "^8.3.0",
+        "@types/node": "^18.13.0",
+        "dotenv": "^16.0.3",
+        "fastify": "^4.13.0",
+        "knex": "^2.4.2",
+        "sqlite3": "^5.1.4",
+        "zod": "^3.20.6"
+    },
+    "devDependencies": {
+        "@types/supertest": "^2.0.12",
+        "supertest": "^6.3.3",
+        "tsup": "^6.6.3",
+        "tsx": "^3.12.3",
+        "typescript": "^4.9.5",
+        "vitest": "^0.28.5"
+    }
 }
